--- a/smartVpageAdapterlibrary/build.gradle
+++ b/smartVpageAdapterlibrary/build.gradle
@@ -37,25 +37,16 @@ dependencies {
 
 //解决发布版本bug:参考连接 https://blog.csdn.net/qq_41885673/article/details/121588094
 afterEvaluate {
-//    publishing {
-//        publications {
-//            release(MavenPublication) {
-//                from components.release
-//                groupId = 'com.smart.adapter' //groupId 随便取
-//                artifactId = 'SmartAdapter'  //artifactId 随便取
-//                version = '1.0.0'
-//            }
-//        }
-//    }
     publishing {
         publications {
-            create("maven_public", MavenPublication::class) {
-                groupId = "com.smart.adapter"
-                artifactId = "SmartAdapter"
-                version = "1.0.0"
-                from(components.getByName("java"))
+            release(MavenPublication) {
+//                from components.release
+                groupId = 'com.smart.adapter' //groupId 随便取
+                artifactId = 'SmartAdapter'  //artifactId 随便取
+                version = '1.0.0'
             }
         }
     }
+
 }
 
