1.library模块化 2.新增无线循环 3.新增自动滚动 4.滚动模式下可绑定当当前页面lifeCycle管理生命周期；可设置循环滚动间隔时间；可设置页面切换的滚动时间

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,11 @@
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".LoopActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
